--- a/web/css/microcms.css
+++ b/web/css/microcms.css
@@ -10,3 +10,7 @@ body {
 .articleTitle:hover, .articleTitle:focus {
     text-decoration: none;
 }
+#errorPanel {
+    padding-top: 30px;
+    padding-bottom: 10px;
+}
